use java 21 features
finally
simplification!